--- a/m2ee.yaml
+++ b/m2ee.yaml
@@ -11,15 +11,13 @@ m2ee:
    "-Dfile.encoding=UTF-8", "-XX:MaxPermSize=128M", "-Xmx512M", "-Xms512M",
    "-Djava.io.tmpdir=/tmp",
  ]
- logfile: /dev/stdout
  pidfile: /tmp/m2ee.pid
 logging:
- - name: SysLogSubscriber
-   type: syslog
-   facility: LOCAL6
-   autosubscribe: INFO
-   prefix: mendix
-   port: 2514
+ - name: FileSubscriber
+   type: file
+   autosubscribe: DEBUG
+   filename: /dev/stdout
+   max_rotation: 0
 mxruntime:
  DatabaseType: HSQLDB
  DatabaseName: app-database
